--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+// @import "node_modules/bootstrap/dist/css/bootstrap.min.css";
+
 
 $light-primary-text: white;
 $dark-primary-text: rgba(black, 0.87);
