adding input error classes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
-.c-red{
-  color: red;
+.valid-input {
+  color: #0079FF;
+}
+.invalid-input{
+  color: #eb4848;
+}
+.invalid-Error-message{
+  font-size: small;
+  color: #eb4848;
+}
+.default-input{
+  color: #7F7F92;
 }
