adjust app logo and redirect to dashboard when user create his account

--- a/src/app/features/auth/components/sign-up/sign-up.component.scss
+++ b/src/app/features/auth/components/sign-up/sign-up.component.scss
@@ -1,14 +1,5 @@
-
-.valid-input {
-  color: #0079FF;
-}
-.invalid-input{
-  color: #eb4848;
-}
-.invalid-Error-message{
-  font-size: small;
-  color: #eb4848;
-}
-.default-input{
-  color: #7F7F92;
+.sign-up{
+  min-height: 100vh;
+  max-height: 100vh;
+  width: 100%;
 }
