--- a/src/app/features/auth/components/sign-up/sign-up.component.html
+++ b/src/app/features/auth/components/sign-up/sign-up.component.html
@@ -1,15 +1,15 @@
 <div class="d-flex col-12 sign-up">
   <div class="d-none d-md-flex col-6 img-div"
     style="display: flex; align-items: center; justify-content: center; overflow: hidden;">
-    <img class="d-md-block m-0 p-0 building-img" style="min-height: 100vh; max-height: 100vh;width: 100%;"
+    <img class="d-md-block m-0 p-0 building-img"
       src=" ../../../../../assets/images/gratte-ciel-entreprise-dans-ville-hong-kong.jpg" alt="buildings image">
   </div>
-  <div class="col-xs-12 col-md-6 p-0 p-md-2  right-item" style="margin-left: auto; margin-right: auto;">
+  <div class="col-xs-12 col-md-6 p-0 p-md-2 pt-md-0   right-item" style="margin-left: auto; margin-right: auto;">
     <div class="w-100 d-flex">
-      <img src="../../../../../assets/images/Group 5.png" class="mt-3 app-logo" alt="App logo"
+      <img src="../../../../../assets/images/Group 5.png" class="mt-2 app-logo" alt="App logo"
         style="margin-left: auto; margin-right: auto; width: 180px;">
     </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class="col-12 mt-4 sign-up-form">
+    <form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class="col-12 mt-3 sign-up-form">
       <h5 class="form-title mb-3">Création de compte</h5>
 
       <mat-form-field appearance="outline" class="col-12 mt-1">
@@ -59,8 +59,11 @@
           confidantialité</mat-checkbox>
       </section>
 
-      <button type="submit" [disabled]="!signUpForm.valid || !check" mat-flat-button color="primary"
+      <button type="submit" class="mb-2" [disabled]="!signUpForm.valid || !check" mat-flat-button color="primary"
         style="padding: 2rem 0.5rem; width: 100%;">Je crée mon compte</button>
+
+      <a [routerLink]="['/login']" class="mt-5" style="font-weight: bold; color: black;"
+        routerLinkActive="router-link-active">Se connecté à mon compte</a>
     </form>
   </div>
 
