--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -9,7 +9,7 @@
       <img src="../../../../../assets/images/Group 5.png" class="mt-2 app-logo" alt="App logo"
         style="margin-left: auto; margin-right: auto; width: 180px;">
     </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class="col-12 mt-4 sign-up-form">
+    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="col-12 mt-4 sign-up-form">
       <h5 class="form-title mb-3">Création de compte</h5>
 
       <div class="emailAlreadyExistError invalid-Error-message text-center w-100">{{emailAlreadyExistError}}
@@ -17,28 +17,28 @@
       <mat-form-field appearance="outline" class="col-12">
         <input required (input)="onInput()" type="email" matInput id="email" formControlName="email" name="email"
           placeholder="Email">
-        <mat-icon *ngIf="signUpForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
-        <mat-icon *ngIf="!signUpForm.get('email')?.valid && !signUpForm.get('email')?.pristine" matSuffix
+        <mat-icon *ngIf="loginForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
+        <mat-icon *ngIf="!loginForm.get('email')?.valid && !loginForm.get('email')?.pristine" matSuffix
           class="invalid-input">check_circle</mat-icon>
-        <mat-icon *ngIf="signUpForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
+        <mat-icon *ngIf="loginForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="col-12">
         <input required (input)="onInput()" [type]="hide ? 'password' : 'text'" matInput id="password"
           formControlName="password" name="pass" placeholder="Mot de passe">
 
-        <button *ngIf="signUpForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
+        <button *ngIf="loginForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
           (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
 
-        <button *ngIf="!signUpForm.get('password')?.valid && !signUpForm.get('password')?.pristine"
-          class="invalid-input" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        <button *ngIf="!loginForm.get('password')?.valid && !loginForm.get('password')?.pristine" class="invalid-input"
+          mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
           [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
 
-        <button *ngIf="signUpForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
+        <button *ngIf="loginForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
           (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
@@ -49,7 +49,7 @@
           confidantialité</mat-checkbox>
       </section>
 
-      <button type="submit" class="mb-2" [disabled]="!signUpForm.valid || !check" mat-flat-button color="primary"
+      <button type="submit" class="mb-2" [disabled]="!loginForm.valid || !check" mat-flat-button color="primary"
         style="padding: 2rem 0.5rem; width: 100%;">Je crée mon compte</button>
 
       <a [routerLink]="['/login']" class="mt-5" style="font-weight: bold; color: black;"
