add global style and transition

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -10,7 +9,7 @@
 @include mat.core();
 
 // @import "node_modules/bootstrap/dist/css/bootstrap.min.css";
-
+@import url(./styles/globale.style.scss);
 
 $light-primary-text: white;
 $dark-primary-text: rgba(black, 0.87);
@@ -21,7 +20,7 @@ $primary_palette: (
   200: #80c1ff,
   300: #4da9ff,
   400: #26a0ff,
-  500: #0079FF,
+  500: #0079ff,
   600: #006fff,
   700: #0065ff,
   800: #005bff,
@@ -45,17 +44,16 @@ $primary_palette: (
     A200: $light-primary-text,
     A400: $light-primary-text,
     A700: $light-primary-text,
-  )
+  ),
 );
 
-
-$accent_palette:(
+$accent_palette: (
   50: #e5f1ff,
   100: #b3d7ff,
   200: #80bdff,
   300: #4da3ff,
   400: #2697ff,
-  500: #0079FF,
+  500: #0079ff,
   600: #0070f6,
   700: #0067ec,
   800: #005de2,
@@ -79,10 +77,8 @@ $accent_palette:(
     A200: $light-primary-text,
     A400: $light-primary-text,
     A700: $light-primary-text,
-  )
+  ),
 );
-
-
 
 $primary: mat.define-palette($primary_palette);
 $accent: mat.define-palette($accent_palette);
@@ -92,13 +88,15 @@ $warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$theme: mat.define-light-theme((
-	color:(
-		primary: $primary,
-		accent: $accent,
-		warn: $warn
-	)
-));
+$theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $primary,
+      accent: $accent,
+      warn: $warn,
+    ),
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -107,5 +105,12 @@ $theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  transition: 300ms;
+}
