--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -1,60 +1,45 @@
-<div class="d-flex col-12 login">
-  <div class="d-none d-md-flex col-6 img-div"
-    style="display: flex; align-items: center; justify-content: center; overflow: hidden;">
-    <img class="d-md-block m-0 p-0 building-img"
-      src=" ../../../../../assets/images/gratte-ciel-entreprise-dans-ville-hong-kong.jpg" alt="buildings image">
+<form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="col-12 mt-4 sign-up-form">
+  <h5 class="form-title mb-3">Création de compte</h5>
+
+  <div class="emailAlreadyExistError invalid-Error-message text-center w-100">{{emailAlreadyExistError}}
   </div>
-  <div class="col-xs-12 col-md-6 p-0 p-md-2 pt-md-0   right-item" style="margin-left: auto; margin-right: auto;">
-    <div class="w-100 d-flex mt-3">
-      <img src="../../../../../assets/images/Group 5.png" class="mt-2 app-logo" alt="App logo"
-        style="margin-left: auto; margin-right: auto; width: 180px;">
-    </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="col-12 mt-4 sign-up-form">
-      <h5 class="form-title mb-3">Création de compte</h5>
+  <mat-form-field appearance="outline" class="col-12">
+    <input required (input)="onInput()" type="email" matInput id="email" formControlName="email" name="email"
+      placeholder="Email">
+    <mat-icon *ngIf="loginForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
+    <mat-icon *ngIf="!loginForm.get('email')?.valid && !loginForm.get('email')?.pristine" matSuffix
+      class="invalid-input">check_circle</mat-icon>
+    <mat-icon *ngIf="loginForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
+  </mat-form-field>
 
-      <div class="emailAlreadyExistError invalid-Error-message text-center w-100">{{emailAlreadyExistError}}
-      </div>
-      <mat-form-field appearance="outline" class="col-12">
-        <input required (input)="onInput()" type="email" matInput id="email" formControlName="email" name="email"
-          placeholder="Email">
-        <mat-icon *ngIf="loginForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
-        <mat-icon *ngIf="!loginForm.get('email')?.valid && !loginForm.get('email')?.pristine" matSuffix
-          class="invalid-input">check_circle</mat-icon>
-        <mat-icon *ngIf="loginForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
-      </mat-form-field>
+  <mat-form-field appearance="outline" class="col-12">
+    <input required (input)="onInput()" [type]="hide ? 'password' : 'text'" matInput id="password"
+      formControlName="password" name="pass" placeholder="Mot de passe">
 
-      <mat-form-field appearance="outline" class="col-12">
-        <input required (input)="onInput()" [type]="hide ? 'password' : 'text'" matInput id="password"
-          formControlName="password" name="pass" placeholder="Mot de passe">
+    <button *ngIf="loginForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
+      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
 
-        <button *ngIf="loginForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
-          (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+    <button *ngIf="!loginForm.get('password')?.valid && !loginForm.get('password')?.pristine" class="invalid-input"
+      mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
 
-        <button *ngIf="!loginForm.get('password')?.valid && !loginForm.get('password')?.pristine" class="invalid-input"
-          mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+    <button *ngIf="loginForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
+      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+  </mat-form-field>
 
-        <button *ngIf="loginForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
-          (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
+  <section class="mb-3 confidential-section" style="margin-top: -23px; margin-left: -5px;">
+    <mat-checkbox (click)="changeCheckedState()" matInput class="confidential-checkbox">J'accepte les politiques de
+      confidantialité</mat-checkbox>
+  </section>
 
-      <section class="mb-3 confidential-section" style="margin-top: -23px; margin-left: -5px;">
-        <mat-checkbox (click)="changeCheckedState()" matInput class="confidential-checkbox">J'accepte les politiques de
-          confidantialité</mat-checkbox>
-      </section>
+  <button type="submit" class="mb-2" [disabled]="!loginForm.valid || !check" mat-flat-button color="primary"
+    style="padding: 2rem 0.5rem; width: 100%;">Je crée mon compte</button>
 
-      <button type="submit" class="mb-2" [disabled]="!loginForm.valid || !check" mat-flat-button color="primary"
-        style="padding: 2rem 0.5rem; width: 100%;">Je crée mon compte</button>
-
-      <a [routerLink]="['/login']" class="mt-5" style="font-weight: bold; color: black;"
-        routerLinkActive="router-link-active">Se connecté à mon compte</a>
-    </form>
-  </div>
-
-</div>
+  <a [routerLink]="['/login']" class="mt-5" style="font-weight: bold; color: black;"
+    routerLinkActive="router-link-active">Se connecté à mon compte</a>
+</form>
