--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -35,8 +35,8 @@
     </button>
   </mat-form-field>
 
-  <button type="submit" class="mb-2" [disabled]="!loginForm.valid || !check" mat-flat-button color="primary"
-    style="padding: 2rem 0.5rem; width: 100%;">Je crée mon compte</button>
+  <button type="submit" class="mb-2" [disabled]="!loginForm.valid" mat-flat-button color="primary"
+    style="padding: 1.7rem 0.5rem; width: 100%;">Je me connecte</button>
 
   <div class="bottom-links mt-0">
     <a [routerLink]="['/auth/forget-password']" class="mt-0 text-decoration-none"
