protect onSubmit function

--- a/src/app/features/auth/components/sign-up/sign-up.component.html
+++ b/src/app/features/auth/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class="col-12 mt-3 sign-up-form">
+<form (ngSubmit)="onSubmit('submit')" [formGroup]="signUpForm" class="col-12 mt-3 sign-up-form">
   <div class="mt-2 mb-2 w-100 text-center invalid-Error-message fs-5 requestErroMessage"> {{requestErroMessage}}
   </div>
   <h5 class="form-title mb-1">Création de compte</h5>
