--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="col-12 mt-3 sign-up-form">
+<form (ngSubmit)="onSubmit('submit')" [formGroup]="loginForm" class="col-12 mt-3 sign-up-form">
 
   <div class="mt-2 mb-2 w-100 text-center invalid-Error-message fs-5 requestErroMessage"> {{requestErroMessage}}</div>
 
@@ -35,8 +35,8 @@
     </button>
   </mat-form-field>
 
-  <button type="submit" class="mb-2" [disabled]="!loginForm.valid" mat-flat-button color="primary"
-    style="padding: 1.7rem 0.5rem; width: 100%;">Je me connecte</button>
+  <button type="submit" (click)="onSubmit('submit')" class="mb-2" [disabled]="!loginForm.valid" mat-flat-button
+    color="primary" style="padding: 1.7rem 0.5rem; width: 100%;">Je me connecte</button>
 
   <div class="bottom-links mt-0">
     <a [routerLink]="['/auth/forget-password']" class="mt-0 text-decoration-none"
