--- a/src/app/features/auth/components/sign-up/sign-up.component.html
+++ b/src/app/features/auth/components/sign-up/sign-up.component.html
@@ -1,15 +1,12 @@
-<form (ngSubmit)="onSubmit('submit')" [formGroup]="signUpForm" class="col-12 mt-3 sign-up-form">
-  <div class="mt-2 mb-2 w-100 text-center invalid-Error-message fs-5 requestErroMessage"> {{requestErroMessage}}
+<form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class="col-12 mt-3 sign-up-form">
+  <div class="mt-2 mb-2 w-100 text-center invalid-Error-message fs-5 requestErroMessage">
   </div>
   <h5 class="form-title mb-1">Création de compte</h5>
 
   <mat-form-field appearance="outline" class="col-12 mt-1">
     <input required matInput (input)="onInput()" (change)="onChange()" id="username" formControlName="username"
       placeholder="Nom d'utilisateur">
-    <mat-icon *ngIf="signUpForm.get('username')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="!signUpForm.get('username')?.valid && !signUpForm.get('username')?.pristine" matSuffix
-      class="invalid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="signUpForm.get('username')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
+    <mat-icon matSuffix [ngClass]="changeIconColor('username')">check_circle</mat-icon>
   </mat-form-field>
 
   <div class="emailAlreadyExistError invalid-Error-message text-center w-100">{{emailAlreadyExistError}}
@@ -17,30 +14,17 @@
   <mat-form-field appearance="outline" class="col-12">
     <input required (input)="onInput()" type="email" matInput id="email" formControlName="email" name="email"
       placeholder="Email">
-    <mat-icon *ngIf="signUpForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="!signUpForm.get('email')?.valid && !signUpForm.get('email')?.pristine" matSuffix
-      class="invalid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="signUpForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
+    <mat-icon matSuffix [ngClass]="changeIconColor('email')">check_circle</mat-icon>
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="col-12">
     <input required (input)="onInput()" [type]="hide ? 'password' : 'text'" matInput id="password"
       formControlName="password" name="pass" placeholder="Mot de passe">
 
-    <button *ngIf="signUpForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
-      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-
-    <button *ngIf="!signUpForm.get('password')?.valid && !signUpForm.get('password')?.pristine" class="invalid-input"
-      mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-
-    <button *ngIf="signUpForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
-      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
+    <mat-icon matSuffix (click)="hide = !hide" [ngClass]="changeIconColor('password')">{{hide
+      ?
+      'visibility_off' : 'visibility'}}
+    </mat-icon>
   </mat-form-field>
 
   <section class="mb-3 confidential-section" style="margin-top: -23px; margin-left: -5px;">
@@ -48,8 +32,8 @@
       confidantialité</mat-checkbox>
   </section>
 
-  <button type="submit" (click)="onSubmit('submit')" class="mb-2" [disabled]="!signUpForm.valid || !check"
-    mat-flat-button color="primary" style="padding: 1.7rem 0.5rem; width: 100%;">Je crée mon compte</button>
+  <button class="mb-2" [disabled]="!signUpForm.valid || !check" mat-flat-button color="primary"
+    style="padding: 1.7rem 0.5rem; width: 100%;">Je crée mon compte</button>
 
   <a [routerLink]="['/auth/login']" class="mt-5" style="font-weight: bold; color: black;"
     routerLinkActive="router-link-active">Se connecté à mon compte</a>
