--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,80 +1,14 @@
 @use "@angular/material" as mat;
 
 @include mat.core();
-
+@import "ngx-toastr/toastr";
 @import url(./styles/globale.style.scss);
 
 $light-primary-text: white;
 $dark-primary-text: rgba(black, 0.87);
 
-$primary_palette: (
-  50: #e0f0ff,
-  100: #b3d9ff,
-  200: #80c1ff,
-  300: #4da9ff,
-  400: #26a0ff,
-  500: #0079ff,
-  600: #006fff,
-  700: #0065ff,
-  800: #005bff,
-  900: #0049ff,
-  A100: #8cd5ff,
-  A200: #51c2ff,
-  A400: #00aeff,
-  A700: #009dff,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $light-primary-text,
-    400: $light-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $light-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  ),
-);
-
-$accent_palette: (
-  50: #e5f1ff,
-  100: #b3d7ff,
-  200: #80bdff,
-  300: #4da3ff,
-  400: #2697ff,
-  500: #0079ff,
-  600: #0070f6,
-  700: #0067ec,
-  800: #005de2,
-  900: #004bcc,
-  A100: #91c3ff,
-  A200: #5eaeff,
-  A400: #1a94ff,
-  A700: #0089ff,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $light-primary-text,
-    400: $light-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $light-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  ),
-);
-
-$primary: mat.define-palette($primary_palette);
-$accent: mat.define-palette($accent_palette);
+$primary: mat.define-palette(mat.$indigo-palette, A400);
+$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400, A700);
 
 $warn: mat.define-palette(mat.$red-palette);
 
