--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit('submit')" [formGroup]="loginForm" class="col-12 mt-3 sign-up-form">
+<form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="col-12 mt-3 sign-up-form">
 
   <div class="mt-2 mb-2 w-100 text-center invalid-Error-message fs-5 requestErroMessage"> {{requestErroMessage}}</div>
 
@@ -9,34 +9,21 @@
   <mat-form-field appearance="outline" class="col-12">
     <input required (input)="onInput()" type="email" matInput id="email" formControlName="email" name="email"
       placeholder="Email">
-    <mat-icon *ngIf="loginForm.get('email')?.valid" matSuffix class="valid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="!loginForm.get('email')?.valid && !loginForm.get('email')?.pristine" matSuffix
-      class="invalid-input">check_circle</mat-icon>
-    <mat-icon *ngIf="loginForm.get('email')?.pristine" matSuffix class="default-input">check_circle</mat-icon>
+    <mat-icon matSuffix [ngClass]="changeIconColor('email')">check_circle</mat-icon>
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="col-12">
     <input required (input)="onInput()" [type]="hide ? 'password' : 'text'" matInput id="password"
       formControlName="password" name="pass" placeholder="Mot de passe">
 
-    <button *ngIf="loginForm.get('password')?.valid" class="valid-input" mat-icon-button matSuffix
-      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-
-    <button *ngIf="!loginForm.get('password')?.valid && !loginForm.get('password')?.pristine" class="invalid-input"
-      mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-
-    <button *ngIf="loginForm.get('password')?.pristine" class="default-input" mat-icon-button matSuffix
-      (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
+    <mat-icon matSuffix (click)="hide = !hide" [ngClass]="changeIconColor('password')">{{hide
+      ?
+      'visibility_off' : 'visibility'}}
+    </mat-icon>
   </mat-form-field>
 
-  <button type="submit" (click)="onSubmit('submit')" class="mb-2" [disabled]="!loginForm.valid" mat-flat-button
-    color="primary" style="padding: 1.7rem 0.5rem; width: 100%;">Je me connecte</button>
+  <button type="submit" (click)="onSubmit()" class="mb-2" [disabled]="!loginForm.valid" mat-flat-button color="primary"
+    style="padding: 1.7rem 0.5rem; width: 100%;">Je me connecte</button>
 
   <div class="bottom-links mt-0">
     <a [routerLink]="['/auth/forget-password']" class="mt-0 text-decoration-none"
