--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -1,1 +1,5 @@
-<p>transactions works!</p>
+<div class="transactions">
+  <div class="header">
+    <div class="title">Mes transactions</div>
+  </div>
+</div>
