--- a/src/app/features/dashboard/components/main/main.component.html
+++ b/src/app/features/dashboard/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex dashboard">
-  <div class="w-30 user-infos">
+  <div class="w-30 user-infos" style="height: 100vh; overflow-y: auto;">
     <div class="d-flex justify-content-center align-items-center user-initial">{{userInitial$ | async}}</div>
     <div class="username"><span class="firstName"> {{firstName$ | async}}</span> <span class="lastNames"> {{lastNames$ |
         async}} </span>
@@ -12,12 +12,114 @@
       </button>
 
     </div>
-    <div class="w-100 mt-3 accounts">
-      <h5>Mes comptes</h5>
-      <div class="account-block">
-        {{(userAccount$ | async)?.iban}}
+    <div class="w-100 mt-3 mb-5 accounts">
+      <h5 class="fw-bold mb-0">Mes comptes</h5>
+      <div class="d-flex align-items-center account-block">
+        <div class="account-type">
+          Compte <span style="font-weight: 900;">{{(userAccount$ | async)?.type}}</span>
+        </div>
+        <div class="d-flex align-items-center account-other-infos">
+          <div class="number-title">
+            <div class="title">
+              Numéro de compte
+            </div>
+            <div class="number" #accountNomber>
+              {{(userAccount$ | async)?.iban}}
+            </div>
+          </div>
+          <div class="sold-title" style="margin-left: 10px;">
+            <div class="title">
+              Solde disponible
+            </div>
+            <div class="d-flex justify-content-between align-items-center sold-view">
+              <div *ngIf="vieuxSold" class="sold text-center  ">
+                {{(userAccount$ | async)?.balance}} XOF
+              </div>
+              <div *ngIf="!vieuxSold" class="d-flex align-items-center text-center pb-2 sold sold-hiden">
+                ........
+              </div>
+              <mat-icon style="margin-left: 5px;" matSuffix (click)="vieuxSold = !vieuxSold">{{vieuxSold
+                ?
+                'visibility_off' : 'visibility'}}
+              </mat-icon>
+            </div>
+          </div>
+          <div class="option">
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon style="color: white; font-weight: bold;">more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button (click)="createSaveAccount(accountNomber.innerText)" mat-menu-item class="d-flex menu-btn"
+                style="justify-content: space-between;">
+                <span>Créer un compte d'Epargne</span>
+                <mat-icon style="order: 1 !important; margin-left: 10px;">add</mat-icon>
+              </button>
+              <button (click)="createBlockedAccount(accountNomber.innerText)" mat-menu-item class="d-flex menu-btn"
+                style="justify-content: space-between;">
+                <span>Créer un compte Blocké</span>
+                <mat-icon style="order: 1 !important; margin-left: 10px;">add</mat-icon>
+              </button>
+            </mat-menu>
+          </div>
+        </div>
       </div>
 
+      <!-- ############################# -->
+
+      <div *ngFor="let subAccount of userSubAccount$ | async" class="d-flex align-items-center account-block">
+        <div class="account-type">
+          Compte <span style="font-weight: 900;">{{subAccount.type}}</span>
+        </div>
+        <div class="d-flex align-items-center account-other-infos">
+          <div class="number-title">
+            <div class="title">
+              Numéro de compte
+            </div>
+            <div class="number" #accountNomber>
+              {{subAccount.iban}}
+            </div>
+          </div>
+          <div class="sold-title" style="margin-left: 10px;">
+            <div class="title">
+              Solde disponible
+            </div>
+            <div class="d-flex justify-content-between align-items-center sold-view">
+              <div *ngIf="vieuxSold" class="sold text-center  ">
+                {{subAccount.balance}} XOF
+              </div>
+              <div *ngIf="!vieuxSold" class="d-flex align-items-center text-center pb-2 sold sold-hiden">
+                ........
+              </div>
+              <mat-icon style="margin-left: 5px;" matSuffix (click)="vieuxSold = !vieuxSold">{{vieuxSold
+                ?
+                'visibility_off' : 'visibility'}}
+              </mat-icon>
+            </div>
+          </div>
+          <div class="option">
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon style="color: white; font-weight: bold;">more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button (click)="createBlockedAccount(accountNomber.innerText)" mat-menu-item class="d-flex menu-btn"
+                style="justify-content: space-between;">
+                <span>Créer un compte d'Epargne</span>
+                <mat-icon style="order: 1 !important; margin-left: 10px;">add</mat-icon>
+              </button>
+              <button mat-menu-item class="d-flex menu-btn" style="justify-content: space-between;">
+                <span>Créer un compte Blocké</span>
+                <mat-icon style="order: 1 !important; margin-left: 10px;">add</mat-icon>
+              </button>
+            </mat-menu>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="account-block">
+        {{(userAccount$ | async)?.iban}}
+      </div>
+      <div class="account-block">
+        {{(userAccount$ | async)?.iban}}
+      </div> -->
     </div>
     <button (click)="onDisconnect()" mat-flat-button class="user-edit disconnect-btn">Se déconnecter</button>
   </div>
