--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,6 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Montserrat, sans-serif !important;
   transition: 300ms;
 }
