--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -1,5 +1,78 @@
 <div class="transactions">
-  <div class="header">
+  <div class="d-flex justify-content-between align-items-center header">
     <div class="title">Mes transactions</div>
+    <form (ngSubmit)="onSubmit($event)" class="d-flex justify-content-between align-items-center other-options">
+      <mat-form-field class="form-fields account-types" appearance="outline">
+        <mat-label>Type de compte</mat-label>
+        <mat-select [value]="'Tout'">
+          <mat-option>Tout</mat-option>
+          <mat-option value="Courant">Courant</mat-option>
+          <mat-option value="Epargne">Epargne</mat-option>
+          <mat-option value="Bloqué">Bloqué</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="form-fields account-status" appearance="outline">
+        <mat-label>Status</mat-label>
+        <mat-select [value]="'Tout'">
+          <mat-option>Tout</mat-option>
+          <mat-option value="Accepté">Accepté</mat-option>
+          <mat-option value="Traitement">Traitement</mat-option>
+          <mat-option value="Rejeté">Rejeté</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="form-fields datepicker" (click)="picker.open()" appearance="outline">
+        <mat-label>Calendrier</mat-label>
+        <input matInput [matDatepicker]="picker" style="cursor: pointer !important;">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field class="form-fields search-field" appearance="outline">
+        <mat-label>Bénéficiaire ou monant</mat-label>
+        <input matInput placeholder="Beneficiaire ou montant">
+        <mat-icon matSuffix>search</mat-icon>
+      </mat-form-field>
+      <button (click)="onSubmit($event)" [matMenuTriggerFor]="menu" class="mb-2 form-fields do-transaction-btn"
+        mat-flat-button extended color="primary">
+        <mat-icon matIconSuffix style="order: 1; font-weight: bold; font-size: 20px;">expand_more</mat-icon>
+        Selectionner une action
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item style="margin-right: 100px;">Transfert</button>
+        <button mat-menu-item>Débit</button>
+      </mat-menu>
+    </form>
+  </div>
+  <div *ngIf="datasources" class="transaction-table">
+    <table mat-table [dataSource]="datasources" class="mat-elevation-z0">
+      <ng-container matColumnDef="subAccountIban">
+        <th mat-header-cell *matHeaderCellDef> Compte </th>
+        <td mat-cell *matCellDef="let element"> {{element.subAccountIban}} </td>
+      </ng-container>
+      <ng-container matColumnDef="accountEmmiterIban">
+        <th mat-header-cell *matHeaderCellDef> Compte </th>
+        <td mat-cell *matCellDef="let element"> {{element.accountEmmiterIban}} </td>
+      </ng-container>
+      <ng-container matColumnDef="transactionType">
+        <th mat-header-cell *matHeaderCellDef> Type de transaction </th>
+        <td mat-cell *matCellDef="let element"> {{element.transactionType}} </td>
+      </ng-container>
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef> Montant </th>
+        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+      </ng-container>
+      <ng-container matColumnDef="reciver.name">
+        <th mat-header-cell *matHeaderCellDef> Bénéficiaire </th>
+        <td mat-cell *matCellDef="let element"> {{element.reciver.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="createAt">
+        <th mat-header-cell *matHeaderCellDef> Date de transaction </th>
+        <td mat-cell *matCellDef="let element"> {{element.createAt}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"
+        style="background-color: #E6E6E6; border-radius: 30px;">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
 </div>
