--- a/src/app/features/auth/components/new-password/new-password.component.html
+++ b/src/app/features/auth/components/new-password/new-password.component.html
@@ -24,5 +24,16 @@
   <button type="submit" class="mb-2"
     [disabled]="!resetPasswordForm.valid || resetPasswordForm.get('password')?.value !== resetPasswordForm.get('repeatPassword')?.value"
     mat-flat-button color="primary" style="padding: 1.7rem 0.5rem; width: 100%;">Je valide</button>
-
+  <div class="button-list">
+    <button (click)="onReturnResetPassword($event)" class="mb-2 d-flex btn" mat-flat-button extended color="accent">
+      <mat-icon matIconSuffix
+        style="font-weight: bold; font-size: 25px; width: 30px;height: 25px; justify-content: space-between;">arrow_back</mat-icon>
+      Retour
+    </button>
+    <button (click)="onReturnLogin($event)" class="mb-2 d-flex btn" mat-flat-button extended color="accent">
+      <mat-icon matIconSuffix
+        style="font-weight: bold; font-size: 25px; width: 30px;height: 25px; justify-content: space-between;">login</mat-icon>
+      Page de connection
+    </button>
+  </div>
 </form>
