--- a/src/app/features/auth/components/password-reset-successfully/password-reset-successfully.component.html
+++ b/src/app/features/auth/components/password-reset-successfully/password-reset-successfully.component.html
@@ -4,7 +4,8 @@
     <h3 style="margin-left: 5px; margin-bottom: 0;">Félicitation</h3>
   </div>
   <button mat-flat-button (click)="goToLoginPage()" class="mt-5" color="primary"
-    style="padding: 1.7rem 0.5rem; width: 100%;">Page de
+    style="padding: 1.7rem 0.5rem; width: 100%;">
+    Page de
     connection</button>
 
 </div>
