--- a/src/app/features/auth/components/reset-password/reset-password.component.html
+++ b/src/app/features/auth/components/reset-password/reset-password.component.html
@@ -10,4 +10,11 @@
   <button type="submit" class="mb-2" [disabled]="!resetPasswordForm.valid" mat-flat-button color="primary"
     style="padding: 1.7rem 0.5rem; width: 100%;">Je valide</button>
 
+  <button (click)="onReturnLogin($event)" style="padding: 1.7rem 0.5rem; width: 100%;" class="mb-2 d-flex"
+    mat-flat-button extended color="accent">
+    <mat-icon matIconSuffix
+      style="font-weight: bold; font-size: 25px; width: 30px;height: 25px; justify-content: space-between;">arrow_back</mat-icon>
+    Page de connection
+  </button>
+
 </form>
