--- a/src/app/features/auth/auth/auth.component.html
+++ b/src/app/features/auth/auth/auth.component.html
@@ -4,7 +4,7 @@
     <img class="d-md-block m-0 p-0 building-img"
       src=" ../../../../../assets/images/gratte-ciel-entreprise-dans-ville-hong-kong.jpg" alt="buildings image">
   </div>
-  <div class="col-xs-12 col-md-6 p-0 p-md-2 pt-md-0 right-item" style="margin-left: auto; margin-right: auto;">
+  <div class="col-xs-12 col-md-6 p-0 p-md-2 pt-md-0 right-item">
     <div class="w-100 d-flex app-logo">
       <img src="../../../../../assets/images/Group 5.png" class="mt-2 app-logo-img" alt="App logo"
         style="margin-left: auto; margin-right: auto; width: 180px;">
