--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -46,11 +46,7 @@
     <table mat-table [dataSource]="datasources" class="mat-elevation-z0">
       <ng-container matColumnDef="subAccountIban">
         <th mat-header-cell *matHeaderCellDef> Compte </th>
-        <td mat-cell *matCellDef="let element"> {{element.subAccountIban}} </td>
-      </ng-container>
-      <ng-container matColumnDef="accountEmmiterIban">
-        <th mat-header-cell *matHeaderCellDef> Compte </th>
-        <td mat-cell *matCellDef="let element"> {{element.accountEmmiterIban}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.subAccountIban | slice:0:7}}****** </td>
       </ng-container>
       <ng-container matColumnDef="transactionType">
         <th mat-header-cell *matHeaderCellDef> Type de transaction </th>
@@ -66,7 +62,12 @@
       </ng-container>
       <ng-container matColumnDef="createAt">
         <th mat-header-cell *matHeaderCellDef> Date de transaction </th>
-        <td mat-cell *matCellDef="let element"> {{element.createAt}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.createAt | date: 'M/d/y'}} </td>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status</th>
+        <td mat-cell *matCellDef="let element" class="transaction-approuved element.status | transactionStatusColor">
+          {{element.status}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"
@@ -74,5 +75,8 @@
       </tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <div *ngIf="datasources?.length == 0" class="not-transaction-yet">
+      Pas data
+    </div>
   </div>
 </div>
