--- a/src/app/features/dashboard/components/main/main.component.scss
+++ b/src/app/features/dashboard/components/main/main.component.scss
@@ -7,7 +7,7 @@
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
-    border: 1px solid #0079ff;
+    border-right: 1px solid #0079ff;
     .user-initial {
       color: white;
       $size: 150px;
