--- a/src/app/features/dashboard/components/transactions/transactions.component.html
+++ b/src/app/features/dashboard/components/transactions/transactions.component.html
@@ -100,14 +100,15 @@
           {{ element.createAt | date : "M/d/y" }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="status">
+      <ng-container matColumnDef="status" style="margin-right: -100px">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          class="transaction-approuved element.status | transactionStatusColor"
-        >
-          {{ element.status }}
+        <td mat-cell *matCellDef="let element" style="width: 100%">
+          <span
+            class="{{ element.status | transactionStatusColor }}"
+            style="font-size: small"
+          >
+            {{ element.status }}</span
+          >
         </td>
       </ng-container>
 
